Add message truncation and error handling improvements in DefaultAgent; introduce localization for empty response messages in English and Polish.

--- a/Agents/DefaultAgent/locale/en/LC_MESSAGES/messages.po
+++ b/Agents/DefaultAgent/locale/en/LC_MESSAGES/messages.po
@@ -13,3 +13,6 @@ msgstr ""
 
 msgid "Sorry, I encountered an error: {error}"
 msgstr "Sorry, I encountered an error: {error}"
+
+msgid "Response content is empty"
+msgstr "Response content is empty"
