--- a/Agents/YoutubeAgent/locale/pl/LC_MESSAGES/messages.po
+++ b/Agents/YoutubeAgent/locale/pl/LC_MESSAGES/messages.po
@@ -12,7 +12,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "Insert youtube link to generate summary."
-msgstr "Wstaw link z YouTube, aby wygenerować podsumowanie."
+msgstr "Wklej link z YouTube, aby wygenerować podsumowanie."
 
 msgid "Error processing YouTube video: {error}"
 msgstr "Błąd podczas przetwarzania filmu YouTube: {error}"
