--- a/Agents/YoutubeAgent/locale/pl/LC_MESSAGES/messages.po
+++ b/Agents/YoutubeAgent/locale/pl/LC_MESSAGES/messages.po
@@ -11,6 +11,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgid "Youtube link is correct. Downloading transcription."
+msgstr "Link YouTube jest poprawny. Pobieranie transkrypcji."
+
+msgid "Transcription downloaded. Generating summary."
+msgstr "Transkrypcja pobrana. Generowanie podsumowania."
+
 msgid "Insert youtube link to generate summary."
 msgstr "Wklej link z YouTube, aby wygenerować podsumowanie."
 
