Enhance AgentRooter to support language-specific agent queries; add check_which_agent_query method for identifying the current agent based on user input. Update translation handling to cache translators by user and language. Modify text and voice handlers to respond to agent queries.

--- a/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
+++ b/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
@@ -14,3 +14,9 @@ msgstr ""
 msgid "Switched to agent: {agent_name}"
 msgstr "Switched to agent: {agent_name}"
 
+msgid "which,what"
+msgstr "which,what"
+
+msgid "The current agent is: {agent_name}"
+msgstr "The current agent is: {agent_name}"
+
