Implement agent request validation in AgentRooter; add methods to extract words and check for invalid agent requests. Update English and Polish translations for error messages related to non-existent agents.

--- a/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
+++ b/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
@@ -20,3 +20,6 @@ msgstr "which,what"
 msgid "The current agent is: {agent_name}"
 msgstr "The current agent is: {agent_name}"
 
+msgid "Agent '{agent_name}' does not exist."
+msgstr "Agent '{agent_name}' does not exist."
+
