--- a/AgentsCore/Rooter/locale/pl/LC_MESSAGES/messages.po
+++ b/AgentsCore/Rooter/locale/pl/LC_MESSAGES/messages.po
@@ -20,3 +20,6 @@ msgstr "jaki,który"
 msgid "The current agent is: {agent_name}"
 msgstr "Aktualny agent to: {agent_name}"
 
+msgid "Agent '{agent_name}' does not exist."
+msgstr "Agent '{agent_name}' nie istnieje."
+
