Enhance AgentRooter to provide feedback when a user attempts to switch to an already active agent; add corresponding translations in English and Polish for the new message. This improves user experience by informing them of their current agent status.

--- a/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
+++ b/AgentsCore/Rooter/locale/en/LC_MESSAGES/messages.po
@@ -23,3 +23,6 @@ msgstr "The current agent is: {agent_name}"
 msgid "Agent '{agent_name}' does not exist."
 msgstr "Agent '{agent_name}' does not exist."
 
+msgid "You are already using agent: {agent_name}"
+msgstr "You are already using agent: {agent_name}"
+
